added body and nav

--- a/GvHHomePage.html
+++ b/GvHHomePage.html
@@ -6,7 +6,16 @@
 			Graft vs Host Official Support Site
 		</title>
 	</head>
-
+<body>
+	<nav>
+		<ul>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+	</nav>
+</body>
 
 
 
