--- a/GvHHomePage.html
+++ b/GvHHomePage.html
@@ -3,19 +3,77 @@
 	<head>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<title>
-			Graft vs Host Official Support Site
+			Follicular Graft vs Host Official Support Site
 		</title>
+		<link rel="stylesheet" type="text/css" href="GvHHomePage.css">
+		<link href='http://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 	</head>
 <body>
 	<nav>
-		<ul>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
+		<ul class="mainmenu">
+			
+			<li>
+				<a href="GvHHomePage.html">Home</a>
+			</li>	
+			<li>
+				<a href="GvHMS.html">Mission Statement</a>
+			</li>
+			<li>
+				<a href="GvHMtC.html">Meet the Community</a>
+			</li>
+			<li>
+				<a href="GvHWtG.html">Ways to Give</a>
+			</li>
+			<li>
+				<a href="GvHFAQ.html">FAQ</a>
+			</li>
+
 		</ul>
 	</nav>
+
+	<img id="mainimage" src="http://fillmurray.com/200/200">
+	<h1>
+		Follicular Graft vs Host Disease (FGvHD) 
+		<br>
+		Official Support Page
+	</h1>	
+
+	<div class="about">
+		<h2>
+			About the Disease
+		</h2>
+		
+		<div class="paraone">	
+
+		<p>
+			GVHD may occur after a bone marrow or stem cell transplant in which someone receives bone marrow tissue or cells from a donor. This type of transplant is called allogeneic. The new, transplanted cells regard the recipient's body as foreign. When this happens, the newly transplanted cells attack the recipient's body.
+		</p>
+		</div>
+
+		<div class="paratwo">
+		<p>	
+GVHD does not occur when someone receives his or her own cells during a transplant. This type of transplant is called autologous.
+
+Before a transplant, tissue and cells from possible donors are checked to see how closely they match the person having the transplant. GVHD is less likely to occur, or symptoms will be milder, when the match is close. The chance of GVHD is
+
+		</p>		
+		</div>
+
+		<img id="science" src="http://placecage.com/300/200">
+	</div>	
+
+	<footer>
+		<h3>
+			Disclaimer
+		</h3>
+		<p>
+			GVHD may occur after a bone marrow or stem cell transplant in which someone receives bone marrow tissue or cells from a donor. This type of transplant is called allogeneic. The new, transplanted cells regard the recipient's body as foreign. When this happens, the newly transplanted cells attack the recipient's body.GVHD may occur after a bone marrow or stem cell transplant in which someone receives bone marrow tissue or cells from a donor. This type of transplant is called allogeneic. The new, transplanted cells regard the recipient's body as foreign. When this happens, the newly transplanted cells attack the recipient's body.
+		</p>		
+	</footer>
+
 </body>
+
 
 
 
