added image folder and 2 images. Minor changes in html - changed placeholder images on main page and added new custom font to header. changed css- added gradient background, and other custom font. also changed colors

--- a/GvHHomePage.html
+++ b/GvHHomePage.html
@@ -6,6 +6,8 @@
 			Follicular Graft vs Host Official Support Site
 		</title>
 		<link rel="stylesheet" type="text/css" href="GvHHomePage.css">
+		<!-- custom fonts -->
+		<link href='http://fonts.googleapis.com/css?family=Dosis:500,400' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 	</head>
@@ -32,7 +34,7 @@
 		</ul>
 	</nav>
 
-	<img id="mainimage" src="http://fillmurray.com/200/200">
+	<img id="mainimage" src="images/icon.png">
 	<h1>
 		Follicular Graft vs Host Disease (FGvHD) 
 		<br>
@@ -60,7 +62,7 @@ Before a transplant, tissue and cells from possible donors are checked to see ho
 		</p>		
 		</div>
 
-		<img id="science" src="http://placecage.com/300/200">
+		<img id="science" src="images/sciencehair.jpg">
 	</div>	
 
 	<footer>
