--- a/GvHMS.html
+++ b/GvHMS.html
@@ -3,12 +3,17 @@
 	<head>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<title>
-			Graft vs Host Official Support Site
+			Follicular Graft vs Host Official Support Site
 		</title>
+		<link rel="stylesheet" type="text/css" href="GvHHomePage.css">
+		<!-- custom fonts -->
+		<link href='http://fonts.googleapis.com/css?family=Dosis:500,400' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 	</head>
 <body>
 	<nav>
-		<ul>
+		<ul class="mainmenu">
 			<li>
 				<a href="GvHHomePage.html">Home</a>
 			</li>	
