added text in about section

--- a/GvHHomePage.html
+++ b/GvHHomePage.html
@@ -47,15 +47,13 @@
 		<div class="paraone">	
 
 		<p>
-			GVHD may occur after a bone marrow or stem cell transplant in which someone receives bone marrow tissue or cells from a donor. This type of transplant is called allogeneic. The new, transplanted cells regard the recipient's body as foreign. When this happens, the newly transplanted cells attack the recipient's body.
+			Follicular Graft vs Host Disease, known in the medical community as FGvHD, is a deadly, debilitating, and highly curable disease that affects as many as dozens of people in the United States alone. Sometimes labeled the 'mid-life crisis disease', due to its prominence in men between the ages of 40-55, this gruesome, devastating illness arises when the cell follicles of transplanted hair are rejected by their host body. The new, transplanted follicle cells may also regard the recipient's body as foreign, and, in turn, may attack the recipient's body.
 		</p>
 		</div>
 
 		<div class="paratwo">
 		<p>	
-GVHD does not occur when someone receives his or her own cells during a transplant. This type of transplant is called autologous.
-
-Before a transplant, tissue and cells from possible donors are checked to see how closely they match the person having the transplant. GVHD is less likely to occur, or symptoms will be milder, when the match is close. The chance of GVHD is
+			When such an attack or rejection occurs, the results can be catastrophic. If left untreated, FGvHD can cause nausea, light-headedness, lower-leg paralysis, and severe bleeding of the scalp or affected area. If you or a loved one have recently undergone a back-alley hair transplant, or received hair from a questionable, possibly non-human source, and are experiencing one or more of these symptons, please consult a doctor or healthcare professional immediately. Don't let FGvHD come between you and the hair of your dreams.
 
 		</p>		
 		</div>
