added basic structure for html page content

--- a/GvHMtC.html
+++ b/GvHMtC.html
@@ -3,7 +3,7 @@
 	<head>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<title>
-			Follicular Graft vs Host Official Support Site
+			Follicular Graft vs Host Official Support Site | Meet the Community
 		</title>
 		<link rel="stylesheet" type="text/css" href="GvHHomePage.css">
 		<!-- custom fonts -->
@@ -11,60 +11,97 @@
 		<link href='http://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 	</head>
-<body>
-	<nav>
-		<ul class="mainmenu">
-			<li>
-				<a href="GvHHomePage.html">Home</a>
-			</li>	
-			<li>
-				<a href="GvHMS.html">Mission Statement</a>
-			</li>
-			<li>
-				<a href="GvHMtC.html">Meet the Community</a>
-			</li>
-			<li>
-				<a href="GvHWtG.html">Ways to Give</a>
-			</li>
-			<li>
-				<a href="GvHFAQ.html">FAQ</a>
-			</li>
-		</ul>
-	</nav>
+	
+	<body>
+		<nav>
+			<ul class="mainmenu">
+				<li>
+					<a href="GvHHomePage.html">Home</a>
+				</li>	
+				<li>
+					<a href="GvHMS.html">Mission Statement</a>
+				</li>
+				<li>
+					<a href="GvHMtC.html">Meet the Community</a>
+				</li>
+				<li>
+					<a href="GvHWtG.html">Ways to Give</a>
+				</li>
+				<li>
+					<a href="GvHFAQ.html">FAQ</a>
+				</li>
+			</ul>
+		</nav>
+		<!-- end of nav heading -->
+		<h1>
+			Graft vs Host Official Support Page 
+		</h1>	
+			<h2 class="MeetHead">Meet the Community</h2>
 
-	<img src="http://fillmurray.com/200/200">
-	<h1>
-		Graft vs Host Official Support Page
-	</h1>	
+		<div class="community">
+			<div class="member" id="bill">
+				<img class="profile-pic"src="http://placeholder.com/300/300">
+				<h3>Bill</h3>
+				<div class="story">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar volutpat tincidunt. Nulla dignissim magna sed efficitur scelerisque. Nullam vitae lectus rutrum, pulvinar metus et, eleifend massa. Mauris ut odio non nisi sodales faucibus. Sed tempor, sem sed blandit auctor, ipsum ipsum feugiat nisi, vitae molestie odio nunc vel neque. Morbi tortor quam, aliquet id finibus ut, euismod et libero. Proin felis nisi, rutrum id velit nec, euismod consectetur dolor. Praesent tempus, mi sed auctor accumsan, lacus lorem sodales est, id porta augue nibh porta massa. Proin dictum nisl vitae lacus vestibulum, vel gravida nisi viverra. Nunc id commodo eros, non ullamcorper velit.
+					</p>
 
-	<div class="about">
-		<h2>
-			About the Disease
-		</h2>
-		
-		<p>
-			Some text
+					<p>
+						Sed id arcu at dui feugiat gravida a vitae justo. Vestibulum ac bibendum mi. Nullam metus ipsum, ullamcorper a fringilla nec, ultricies nec massa. Mauris fringilla ex non enim ullamcorper, quis mattis dui vulputate. Nullam consequat nec lectus eu pretium. Curabitur pretium mi et leo lobortis porta. Aenean ut nulla eu ex maximus venenatis. Maecenas in augue id lectus cursus iaculis sed id mauris. In ut risus eu purus tincidunt tempus.
+					</p>
 
-		</p>		
+					<p>
+						Integer imperdiet metus vel leo ornare sollicitudin. Donec a lorem euismod, hendrerit magna non, luctus enim. Sed lobortis rutrum fermentum. Sed felis odio, lacinia et ante sit amet, vestibulum finibus ex. Nullam leo velit, rhoncus ut tincidunt quis, dictum sit amet velit. Praesent in posuere odio. Etiam eget sapien sed quam auctor tempor. Nulla facilisi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dapibus urna congue, lobortis eros eget, dignissim lectus. 
+					</p>
+				</div>
+			</div>	
 
-	</div>	
+			<div class="member" id="brendan">
+				<img class="profile-pic"src="http://placeholder.com/300/300">
+				<h3>Brendan</h3>
+				<div class="story">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar volutpat tincidunt. Nulla dignissim magna sed efficitur scelerisque. Nullam vitae lectus rutrum, pulvinar metus et, eleifend massa. Mauris ut odio non nisi sodales faucibus. Sed tempor, sem sed blandit auctor, ipsum ipsum feugiat nisi, vitae molestie odio nunc vel neque. Morbi tortor quam, aliquet id finibus ut, euismod et libero. Proin felis nisi, rutrum id velit nec, euismod consectetur dolor. Praesent tempus, mi sed auctor accumsan, lacus lorem sodales est, id porta augue nibh porta massa. Proin dictum nisl vitae lacus vestibulum, vel gravida nisi viverra. Nunc id commodo eros, non ullamcorper velit.
+					</p>
 
-	<footer>
-		<h3>
-			Disclaimer
-		</h3>
-		<p>
-			More text
-		</p>		
-	</footer>
+					<p>
+						Sed id arcu at dui feugiat gravida a vitae justo. Vestibulum ac bibendum mi. Nullam metus ipsum, ullamcorper a fringilla nec, ultricies nec massa. Mauris fringilla ex non enim ullamcorper, quis mattis dui vulputate. Nullam consequat nec lectus eu pretium. Curabitur pretium mi et leo lobortis porta. Aenean ut nulla eu ex maximus venenatis. Maecenas in augue id lectus cursus iaculis sed id mauris. In ut risus eu purus tincidunt tempus.
+					</p>
 
-</body>
+					<p>
+						Integer imperdiet metus vel leo ornare sollicitudin. Donec a lorem euismod, hendrerit magna non, luctus enim. Sed lobortis rutrum fermentum. Sed felis odio, lacinia et ante sit amet, vestibulum finibus ex. Nullam leo velit, rhoncus ut tincidunt quis, dictum sit amet velit. Praesent in posuere odio. Etiam eget sapien sed quam auctor tempor. Nulla facilisi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dapibus urna congue, lobortis eros eget, dignissim lectus. 
+					</p>
+				</div>
+			</div>	
 
+			<div class="member" id="matthew">
+				<img class="profile-pic"src="http://placeholder.com/300/300">
+				<h3>Matthew</h3>
+				<div class="story">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar volutpat tincidunt. Nulla dignissim magna sed efficitur scelerisque. Nullam vitae lectus rutrum, pulvinar metus et, eleifend massa. Mauris ut odio non nisi sodales faucibus. Sed tempor, sem sed blandit auctor, ipsum ipsum feugiat nisi, vitae molestie odio nunc vel neque. Morbi tortor quam, aliquet id finibus ut, euismod et libero. Proin felis nisi, rutrum id velit nec, euismod consectetur dolor. Praesent tempus, mi sed auctor accumsan, lacus lorem sodales est, id porta augue nibh porta massa. Proin dictum nisl vitae lacus vestibulum, vel gravida nisi viverra. Nunc id commodo eros, non ullamcorper velit.
+					</p>
 
+					<p>
+						Sed id arcu at dui feugiat gravida a vitae justo. Vestibulum ac bibendum mi. Nullam metus ipsum, ullamcorper a fringilla nec, ultricies nec massa. Mauris fringilla ex non enim ullamcorper, quis mattis dui vulputate. Nullam consequat nec lectus eu pretium. Curabitur pretium mi et leo lobortis porta. Aenean ut nulla eu ex maximus venenatis. Maecenas in augue id lectus cursus iaculis sed id mauris. In ut risus eu purus tincidunt tempus.
+					</p>
 
+					<p>
+						Integer imperdiet metus vel leo ornare sollicitudin. Donec a lorem euismod, hendrerit magna non, luctus enim. Sed lobortis rutrum fermentum. Sed felis odio, lacinia et ante sit amet, vestibulum finibus ex. Nullam leo velit, rhoncus ut tincidunt quis, dictum sit amet velit. Praesent in posuere odio. Etiam eget sapien sed quam auctor tempor. Nulla facilisi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dapibus urna congue, lobortis eros eget, dignissim lectus. 
+					</p>
+				</div>
+			</div>			
+		</div>	
 
+		<footer>
+			<h3>
+				Disclaimer
+			</h3>
+			<p>
+				More text
+			</p>		
+		</footer>
 
-
-
-
+	</body>
 </html>
