--- a/GvHWtG.html
+++ b/GvHWtG.html
@@ -2,9 +2,7 @@
 <html>
 	<head>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<title>
-			Follicular Graft vs Host Official Support Site
-		</title>
+		<title>Follicular Graft vs Host Official Support Site | Ways to Give</title>
 		<link rel="stylesheet" type="text/css" href="GvHHomePage.css">
 		<!-- custom fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Dosis:500,400' rel='stylesheet' type='text/css'>
@@ -31,31 +29,19 @@
 			</li>
 		</ul>
 	</nav>
-
-	<img src="http://fillmurray.com/200/200">
-	<h1>
-		Graft vs Host Official Support Page
-	</h1>	
-
-	<div class="about">
-		<h2>
-			About the Disease
-		</h2>
+	<!-- end of nav header -->
+	<div clas="ways-to-give">
+		<h1>Ways to Give</h1>
+		<img id="header-img" src="http://fillmurray.com/900/300">
 		
-		<p>
-			Some text
-
-		</p>		
-
-	</div>	
+		<div id="hair"></div>
+		<div id="care"></div>
+		<div id="support"></div>
+	</div>
+</div>
 
 	<footer>
-		<h3>
-			Disclaimer
-		</h3>
-		<p>
-			More text
-		</p>		
+
 	</footer>
 
 </body>
