added 2nd css page, new img directories and some content

--- a/GvHMtC.html
+++ b/GvHMtC.html
@@ -5,7 +5,7 @@
 		<title>
 			Follicular Graft vs Host Official Support Site | Meet the Community
 		</title>
-		<link rel="stylesheet" type="text/css" href="GvHHomePage.css">
+		<link rel="stylesheet" type="text/css" href="gvhgreen.css">
 		<!-- custom fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Dosis:500,400' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
@@ -36,15 +36,15 @@
 		<h1>
 			Graft vs Host Official Support Page 
 		</h1>	
-			<h2 class="MeetHead">Meet the Community</h2>
+			<h1 class="MeetHead">Meet the Community</h1>
 
 		<div class="community">
-			<div class="member" id="bill">
-				<img class="profile-pic"src="http://placeholder.com/300/300">
-				<h3>Bill</h3>
+			<div class="member" id="pete">
+				<img class="profile-pic"src="images/community/pete.jpg">
+				<h2>Pete</h2>
 				<div class="story">
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar volutpat tincidunt. Nulla dignissim magna sed efficitur scelerisque. Nullam vitae lectus rutrum, pulvinar metus et, eleifend massa. Mauris ut odio non nisi sodales faucibus. Sed tempor, sem sed blandit auctor, ipsum ipsum feugiat nisi, vitae molestie odio nunc vel neque. Morbi tortor quam, aliquet id finibus ut, euismod et libero. Proin felis nisi, rutrum id velit nec, euismod consectetur dolor. Praesent tempus, mi sed auctor accumsan, lacus lorem sodales est, id porta augue nibh porta massa. Proin dictum nisl vitae lacus vestibulum, vel gravida nisi viverra. Nunc id commodo eros, non ullamcorper velit.
+						pete from madmen Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar volutpat tincidunt. Nulla dignissim magna sed efficitur scelerisque. Nullam vitae lectus rutrum, pulvinar metus et, eleifend massa. Mauris ut odio non nisi sodales faucibus. Sed tempor, sem sed blandit auctor, ipsum ipsum feugiat nisi, vitae molestie odio nunc vel neque. Morbi tortor quam, aliquet id finibus ut, euismod et libero. Proin felis nisi, rutrum id velit nec, euismod consectetur dolor. Praesent tempus, mi sed auctor accumsan, lacus lorem sodales est, id porta augue nibh porta massa. Proin dictum nisl vitae lacus vestibulum, vel gravida nisi viverra. Nunc id commodo eros, non ullamcorper velit.
 					</p>
 
 					<p>
@@ -58,8 +58,8 @@
 			</div>	
 
 			<div class="member" id="brendan">
-				<img class="profile-pic"src="http://placeholder.com/300/300">
-				<h3>Brendan</h3>
+				<img class="profile-pic"src="http://www.placehold.it/300x300/">
+				<h2>Brendan</h2>
 				<div class="story">
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar volutpat tincidunt. Nulla dignissim magna sed efficitur scelerisque. Nullam vitae lectus rutrum, pulvinar metus et, eleifend massa. Mauris ut odio non nisi sodales faucibus. Sed tempor, sem sed blandit auctor, ipsum ipsum feugiat nisi, vitae molestie odio nunc vel neque. Morbi tortor quam, aliquet id finibus ut, euismod et libero. Proin felis nisi, rutrum id velit nec, euismod consectetur dolor. Praesent tempus, mi sed auctor accumsan, lacus lorem sodales est, id porta augue nibh porta massa. Proin dictum nisl vitae lacus vestibulum, vel gravida nisi viverra. Nunc id commodo eros, non ullamcorper velit.
@@ -76,8 +76,8 @@
 			</div>	
 
 			<div class="member" id="matthew">
-				<img class="profile-pic"src="http://placeholder.com/300/300">
-				<h3>Matthew</h3>
+				<img class="profile-pic"src="http://www.placehold.it/300x300/">
+				<h2>Matthew</h2>
 				<div class="story">
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar volutpat tincidunt. Nulla dignissim magna sed efficitur scelerisque. Nullam vitae lectus rutrum, pulvinar metus et, eleifend massa. Mauris ut odio non nisi sodales faucibus. Sed tempor, sem sed blandit auctor, ipsum ipsum feugiat nisi, vitae molestie odio nunc vel neque. Morbi tortor quam, aliquet id finibus ut, euismod et libero. Proin felis nisi, rutrum id velit nec, euismod consectetur dolor. Praesent tempus, mi sed auctor accumsan, lacus lorem sodales est, id porta augue nibh porta massa. Proin dictum nisl vitae lacus vestibulum, vel gravida nisi viverra. Nunc id commodo eros, non ullamcorper velit.
