--- a/GvHWtG.html
+++ b/GvHWtG.html
@@ -3,54 +3,61 @@
 	<head>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<title>Follicular Graft vs Host Official Support Site | Ways to Give</title>
-		<link rel="stylesheet" type="text/css" href="GvHHomePage.css">
+		<link rel="stylesheet" type="text/css" href="gvhgreen.css">
 		<!-- custom fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Dosis:500,400' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 	</head>
-<body>
-	<nav>
-		<ul class="mainmenu">
-			<li>
-				<a href="GvHHomePage.html">Home</a>
-			</li>	
-			<li>
-				<a href="GvHMS.html">Mission Statement</a>
-			</li>
-			<li>
-				<a href="GvHMtC.html">Meet the Community</a>
-			</li>
-			<li>
-				<a href="GvHWtG.html">Ways to Give</a>
-			</li>
-			<li>
-				<a href="GvHFAQ.html">FAQ</a>
-			</li>
-		</ul>
-	</nav>
-	<!-- end of nav header -->
-	<div clas="ways-to-give">
-		<h1>Ways to Give</h1>
-		<img id="header-img" src="http://fillmurray.com/900/300">
-		
-		<div id="hair"></div>
-		<div id="care"></div>
-		<div id="support"></div>
+	<body>
+		<nav>
+			<ul class="mainmenu">
+				<li>
+					<a href="GvHHomePage.html">Home</a>
+				</li>	
+				<li>
+					<a href="GvHMS.html">Mission Statement</a>
+				</li>
+				<li>
+					<a href="GvHMtC.html">Meet the Community</a>
+				</li>
+				<li>
+					<a href="GvHWtG.html">Ways to Give</a>
+				</li>
+				<li>
+					<a href="GvHFAQ.html">FAQ</a>
+				</li>
+			</ul>
+		</nav>
+		<!-- end of nav header -->
+		<div clas="ways-to-give">
+			<h1>Ways to Give</h1>
+			<img id="header-img" src="http://fillmurray.com/900/300">
+			
+			<div id="hair">
+				<img src="images/ways/hair.jpg">
+				<h3>Donate Hair</h3>
+				<p> blach make temp air pieces to go over hair plugs in transition</p>
+				<h4>donation requirements</h4>
+					<ul>
+						<li></li>
+					</ul>
+			</div>
+			<div id="care">
+				<h3>Volunteer</h3>
+					<p>Connect with members of the FGVH Community</p>
+			</div>
+			
+			<div id="support">
+				<h3>Support</h3>
+				<p> Give a finacial donation to help support FGvH</p>
+			</div>
+		</div>
 	</div>
-</div>
 
-	<footer>
+		<footer>
 
-	</footer>
+		</footer>
 
-</body>
-
-
-
-
-
-
-
-
+	</body>
 </html>
