--- a/GvHHomePage.html
+++ b/GvHHomePage.html
@@ -34,7 +34,7 @@
 		</ul>
 	</nav>
 
-	<img id="mainimage" src="images/icon.png">
+	<a href="https://www.youtube.com/watch?v=kKXkfLhn6pA" target="_blank"><img id="mainimage" src="images/tobias.png"></a>
 	<h1>
 		Follicular Graft vs Host Disease (FGvHD) 
 		<br>
@@ -62,23 +62,27 @@
 
 		<img id="science" src="images/sciencehair.jpg">
 	</div>	
-
+		<br>
+		<br>
 	<footer>
 		<h3>
 			Disclaimer
 		</h3>
 		<p>
-			GVHD may occur after a bone marrow or stem cell transplant in which someone receives bone marrow tissue or cells from a donor. This type of transplant is called allogeneic. The new, transplanted cells regard the recipient's body as foreign. When this happens, the newly transplanted cells attack the recipient's body.GVHD may occur after a bone marrow or stem cell transplant in which someone receives bone marrow tissue or cells from a donor. This type of transplant is called allogeneic. The new, transplanted cells regard the recipient's body as foreign. When this happens, the newly transplanted cells attack the recipient's body.
+			This site, and all of it's proceeds, is dedicated solely to Follicular Graft vs Host Disease, and should not be confused with general Graft vs Host Disease. General Graft vs Host Disease refers to the affliction caused by the rejected transplant of any cells, such as skin cells, while FGvHD refers exclusively to the disease that arises as a result of rejected hair transplants. If you have recently undergone a skin or other non-follicular graft, and are experiencing the effects of general Graft vs Host Disease, or are looking to donate to the cause, please direct yourself to another site.
 		</p>		
 	</footer>
 
+	<script>
+	$(document).ready(function(){
+		$(".mainmenu").hide(function(){
+			 $(".mainmenu").slideDown(1000)}
+			
+			);
+	});
+	</script>
+
 </body>
-
-
-
-
-
-
 
 
 </html>
