--- a/GvHFAQ.html
+++ b/GvHFAQ.html
@@ -132,6 +132,7 @@
 				$(".a4").hide();
 				$(".a5").hide();
 				$(".a6").hide();
+				$(".a7").hide();
 
 				$(".q1").click(function(){
 					$(".answers").show(),
@@ -157,6 +158,10 @@
 				$(".q6").click(function(){
 					$(".answers").show(),
 					$(".a6").show(1000)
+				});
+				$(".q7").click(function(){
+					$(".answers").show(),
+					$(".a7").show(1000)
 				});
 			});	
 		</script>
