added more images, added fb button and email button, updated content

--- a/GvHMtC.html
+++ b/GvHMtC.html
@@ -39,11 +39,9 @@
 			<h1 class="MeetHead">Meet the Community</h1>
 
 		<div class="community">
-			
-<<<<<<< HEAD
 
 			<div class="member" id="matthew">
-				<img class="profile-pic"src="http://www.placehold.it/300x300/">
+				<img class="profile-pic"src="images/community/matthew.jpg">
 
 				<h2>Matthew</h2>
 				<div class="story">
@@ -52,7 +50,7 @@
 					</p>
 
 					<p>
-						Things seemd to have gotten better for Matthew and he was able to go on to maketimeless classics such as <em>How to Lose a guy in 10 Days</em> and <em>The Ghosts of Girlfriends Past</em>. However in the summer of 2012 Matthew's hair began to get him alive. He lost 30lbs and the respect of the RomCom genre. Since his FGvH diagnosis Matthew's ilness has left him ostricized to role in boring erious dramas about history and science, such as <em>Dallas Buyer's Club, True Detective</em> and <em>Intersteller.</em>
+						Things seemd to have gotten better for Matthew and he was able to go on to maketimeless classics such as <em>How to Lose a guy in 10 Days </em> and <em>The Ghosts of Girlfriends Past</em>. However in the summer of 2012 Matthew's hair began to get him alive. He lost 30lbs and the respect of the RomCom genre. Since his FGvH diagnosis Matthew's ilness has left him ostricized to role in boring erious dramas about history and science, such as <em>Dallas Buyer's Club, True Detective</em> and <em>Intersteller.</em>
 					</p>
 
 					<p>
@@ -62,7 +60,7 @@
 			</div>	
 
 			<div class="member" id="brendan">
-				<img class="profile-pic"src="http://www.placehold.it/300x300/">
+				<img class="profile-pic"src="images/community/brendan.jpg">
 				<h2>Brendan</h2>
 				<div class="story">
 					<p>
@@ -85,7 +83,7 @@
 				Disclaimer
 			</h3>
 			<p>
-				More text
+				we do not know these people.
 			</p>		
 		</footer>
 
@@ -97,7 +95,5 @@
 			);
 	});
 		</script>
->>>>>>> 6b436163afd5296af3220e15f5a5c5e8fc237cf1
-
 	</body>
 </html>
