--- a/GvHWtG.html
+++ b/GvHWtG.html
@@ -30,36 +30,46 @@
 			</ul>
 		</nav>
 		<!-- end of nav header -->
-		<div clas="ways-to-give">
+		<div class="ways-to-give">
 			<h1>Ways to Give</h1>
 			<img id="header-img" src="http://fillmurray.com/900/300">
 			
 			<div id="hair">
 				<img src="images/ways/hair.jpg">
 				<h3>Donate Hair</h3>
-				<p> blach make temp air pieces to go over hair plugs in transition</p>
-				<h4>donation requirements</h4>
+				<p>Often places where hair plugs are harvested are left bare and exposed to the elements after the procedure.</p>
+				<p> You can make a donation of spare hair that will be into a prostetic for a member of the FGvH Community</p>
+				<h4>Donation Requirements</h4>
 					<ul>
-						<li></li>
+						<li>must be longer than 3 inches</li>
+						<li>must not be attached to skin</li>
+						<li>must not be bleached</li>
 					</ul>
 			</div>
 			<div id="care">
+				<img src="images/ways/care.jpg">
 				<h3>Volunteer</h3>
 					<p>Connect with members of the FGVH Community</p>
+
+					<div class="facebook">
+						<a id="facebook-link" href="https://www.facebook.com/pages/Tobias-Funke-Analrapist/45555017336">f</a>
+					</div>
 			</div>
 			
 			<div id="support">
+				<img src="images/ways/money.jpg">
 				<h3>Support</h3>
 				<p> Give a finacial donation to help support FGvH</p>
+
+				<p> please email <a  id="email" href="mailto:CarolKincade@FGvH.com">CarolKincade@FGvH.com</a> for further information</p>
 			</div>
 		</div>
 	</div>
-
 		<footer>
-
+			<h2>Disclaimer</h2>
+			<p>Don't send money!</p>
 		</footer>
 
-<<<<<<< HEAD
 		<script>
 	$(document).ready(function(){
 		$(".mainmenu").hide(function(){
@@ -67,9 +77,6 @@
 			
 			);
 	});
-	</script>
-
-=======
->>>>>>> 6b436163afd5296af3220e15f5a5c5e8fc237cf1
+	</script> 
 	</body>
 </html>
