--- a/GvHMtC.html
+++ b/GvHMtC.html
@@ -46,11 +46,11 @@
 				<h2>Matthew</h2>
 				<div class="story">
 					<p>
-						Matthew started to lose his hair in 1999. To save his successful career as lead man in Hollywood's top RomComs he had to get a hair transplant.
+						Matthew started to lose his hair in 1999. To save his successful career as a leading man in Hollywood's top RomComs, he had to get a hair transplant.
 					</p>
 
 					<p>
-						Things seemd to have gotten better for Matthew and he was able to go on to maketimeless classics such as <em>How to Lose a guy in 10 Days </em> and <em>The Ghosts of Girlfriends Past</em>. However in the summer of 2012 Matthew's hair began to get him alive. He lost 30lbs and the respect of the RomCom genre. Since his FGvH diagnosis Matthew's ilness has left him ostricized to role in boring erious dramas about history and science, such as <em>Dallas Buyer's Club, True Detective</em> and <em>Intersteller.</em>
+						Things seemed to get better for Matthew and he was able to go on to make timeless classics such as <em>How to Lose a Guy in 10 Days </em> and <em>The Ghosts of Girlfriends Past</em>. However, in the summer of 2012, Matthew's hair began to eat him alive. He lost 30lbs and the respect of the RomCom genre. Since his FGvHD diagnosis, Matthew's illness has pigeonholed him into only taking roles in boring, serious, critically acclaimed dramas about history and science, such as <em>Dallas Buyer's Club, True Detective</em> and <em>Intersteller.</em>
 					</p>
 
 					<p>
@@ -64,28 +64,42 @@
 				<h2>Brendan</h2>
 				<div class="story">
 					<p>
-						Brendan, just like Matthew was at the top of his career when he was diagnosied with FGvH. FGvH is a disease that gets worse over time. Being that Brendan has been living with FGvH for twice as long his career has been reduced to only to indie movies and animation voice overs. The last Hollywood role that he was casted in was an uncredited role in <em>G.I.Joe: The Rise of Cobra.</em> He is actually prohibited from being credited in any real movie now. 
+						Brendan, just like Matthew, was at the top of his career when he was diagnosed with FGvHD. FGvHD is a disease that gets worse over time. Being that Brendan has been living with FGvHD for twice as long, his career has been reduced to only indie movies and voice overs in animated films. The last Hollywood role that he was cast in was an uncredited role in <em>G.I.Joe: The Rise of Cobra.</em> He is actually prohibited from being credited in any real movie now. 
 					</p>
 
 					<p>
-						At this rate Brendan's career will be compleatly non exsistant in only a couple of years. Ever hopeful Brendan just wants to make it long enough to see <em>The Mummy 4</em> get made.
+						At this rate, Brendan's career will be completely non-existant in only a couple of years. Ever hopeful, Brendan just wants to make it long enough to see <em>The Mummy 4</em> get made.
 					</p>
 
-					<p class="quote">
+					<p>
 						"I just feel like I owe it to my fans to hang in there."
 					</p>
 				</div>
-			</div>			
-		</div>	
+			</div>	
 
-		<footer>
-			<h3>
-				Disclaimer
-			</h3>
-			<p>
-				we do not know these people.
-			</p>		
-		</footer>
+			<div class="member" id="brendan">
+				<img class="profile-pic"src="images/community/donald.jpg">
+				<h2>Donald</h2>
+				<div class="story">
+					<p>
+						Donald was once a hair-healthy, jovial real-estate mogul. He was polite, mild-mannered, and conscientious. Then, one day, his hair began to thin. He immediately received a hair-transplant, and for a time, he was fine. That is, until FGvHD reared it's ugly head, and he was forced to have his hair-plugs removed. Suddenly, everything changed.
+					</p>
+
+					<p>
+						In place of his thick, flowing locks, was now a dry, whispy, shamefully elaborate combover. The sunny, respectful Donald soured, and became a thing of the past. Without his hair to buoy his confidence, he began to resort to berating others, hurling insults at any poor soul unfortunate enough to cross his path. The once model employer began to fire employees at will, going so far as to televise these terminations for the world to see.
+					</p>
+
+					<p>
+						His family misses the old Donald. His friends miss the old Donald. He, himself, misses the old Donald. If it wasn't for FGvHD, that Donald would still be around, brightening everyone's day with his warm smile and beautiful hair.
+					</p>
+
+					<p>
+						It's not too late for Donald. Give today.
+					</p>
+				</div>
+			</div>
+
+		</div>	
 
 		<script>
 	$(document).ready(function(){
