--- a/GvHWtG.html
+++ b/GvHWtG.html
@@ -32,13 +32,13 @@
 		<!-- end of nav header -->
 		<div class="ways-to-give">
 			<h1>Ways to Give</h1>
-			<img id="header-img" src="http://fillmurray.com/900/300">
+			<!-- <img id="header-img" src="http://fillmurray.com/900/300"> -->
 			
 			<div id="hair">
 				<img src="images/ways/hair.jpg">
 				<h3>Donate Hair</h3>
-				<p>Often places where hair plugs are harvested are left bare and exposed to the elements after the procedure.</p>
-				<p> You can make a donation of spare hair that will be into a prostetic for a member of the FGvH Community</p>
+				<p>Often, places where hair-plugs are harvested are left bare and exposed to the elements after the removal procedure.</p>
+				<p> You can make a donation of spare hair that will be made into a prostetic for a member of the FGvHD Community</p>
 				<h4>Donation Requirements</h4>
 					<ul>
 						<li>must be longer than 3 inches</li>
@@ -49,7 +49,7 @@
 			<div id="care">
 				<img src="images/ways/care.jpg">
 				<h3>Volunteer</h3>
-					<p>Connect with members of the FGVH Community</p>
+					<p>Connect with members of the FGvHD Community</p>
 
 					<div class="facebook">
 						<a id="facebook-link" href="https://www.facebook.com/pages/Tobias-Funke-Analrapist/45555017336">f</a>
@@ -59,16 +59,12 @@
 			<div id="support">
 				<img src="images/ways/money.jpg">
 				<h3>Support</h3>
-				<p> Give a finacial donation to help support FGvH</p>
+				<p> Give a finacial donation to help support FGvHD</p>
 
-				<p> please email <a  id="email" href="mailto:CarolKincade@FGvH.com">CarolKincade@FGvH.com</a> for further information</p>
+				<p> please email <a  id="email" href="mailto:CarolKincade@FGvH.com">CarolKincade@FGvHD.com</a> for further information</p>
 			</div>
 		</div>
 	</div>
-		<footer>
-			<h2>Disclaimer</h2>
-			<p>Don't send money!</p>
-		</footer>
 
 		<script>
 	$(document).ready(function(){
