--- a/GvHWtG.html
+++ b/GvHWtG.html
@@ -32,7 +32,6 @@
 		<!-- end of nav header -->
 		<div class="ways-to-give">
 			<h1>Ways to Give</h1>
-			<!-- <img id="header-img" src="http://fillmurray.com/900/300"> -->
 			
 			<div id="hair">
 				<img src="images/ways/hair.jpg">
@@ -61,7 +60,7 @@
 				<h3>Support</h3>
 				<p> Give a finacial donation to help support FGvHD</p>
 
-				<p> please email <a  id="email" href="mailto:CarolKincade@FGvH.com">CarolKincade@FGvHD.com</a> for further information</p>
+				<p> please email <a  id="email" href="mailto:CarolKincade@FGvHD.com">CarolKincade@FGvHD.com</a> for further information</p>
 			</div>
 		</div>
 	</div>
